# ProjectBM

./: .gitignore  CMakeLists.txt  FindGfxLibs.cmake  README.md  imgui.ini
resources/: blinn-phong.glsl  bubble.dae  dustcloud.dae  quad.dae  simple_frag.glsl  simple_vert.glsl  tex_frag0.glsl  toto.fbx  totodile.mtl  yellow.glsl
resources/Feraligatr/: Feraligatr.SMD  Tag.txt
resources/anim/: toto.dae  toto2.dae  toto3.dae  toto_dab.dae  toto_jump.dae  toto_run.dae  toto_run_fast.dae  toto_walk.dae  toto_watergun.dae  totodile_anim.dae  yeetus.dae  yeetus.fbx  yeetus.gltf
resources/anim/old/: toto_bite.dae
resources/arms/source/: arms1.fbx
resources/boko/: boko.blend  boko.dae  boko2.blend  boko_idle.dae
resources/general/: waterball.dae
resources/melee/: Captain_Falcon.mtl
resources/melee/Sandbag/: ItmSandbag.mtl  sandbag.fbx
resources/melee/Totodile/: totodile.mtl
resources/melee/falcon/: Captain_Falcon.fbx
resources/melee/falcon2/: Captain Falcon.dae  falcon.fbx
resources/melee/fod/: Extra Readme (Reflection).txt  Extra Readme.txt  FoD.mtl  FoD2.0.mtl  Fountain of Dreams Reflection.mtl  Fountain of Dreams.mtl  beam.mtl  fountain.fbx  platform.fbx  platform3.mtl  skyring1.fbx  skyring1.mtl  skyring2.fbx  skyring2.mtl
resources/melee/totodile/: toto.dae
resources/pokeball/: Pokeball.fbx  pokeball.dae
resources/shaders/: anim_vert.glsl  blinn-phong.glsl  noShadow_frag.glsl  outline_frag.glsl  outline_vert.glsl  simple_vert.glsl
resources/terrain/: 3d-model.mtl  moon.fbx  sand.fbx
src/: Action.h  Camera.cpp  Camera.h  DynamicCharacterController.cpp  DynamicCharacterController.h  GameObject.cpp  GameObject.h  Hitbox.h  InputHandler.cpp  InputHandler.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Particle.h  ParticleRenderer.h  ParticleSystem.h  Player.cpp  Player.h  Program.cpp  Program.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Time.h  Totodile.cpp  Totodile.h  WindowManager.cpp  main.cpp
src/Animation/: AnimatedObject.cpp  AnimatedObject.h  AnimatedShape.cpp  AnimatedShape.h  Animator.cpp  Animator.h  Joint.cpp  Joint.h
src/GameObjects/: Platform.cpp  Platform.h
src/Physics/: CollisionDetector.cpp  CollisionDetector.h  Hitbox.cpp  Hitbox.h
